--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,14 @@
-
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
+bintray.user=izooto
+bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
+
+# maven central credentials
+
+NEXUS_USERNAME=BhiCAe56
+NEXUS_PASSWORD=aQ8D0zLiBgIwWpfiwmlMXWh4k8MGwh/cTjzBpHQzQjBM
+signing.keyId=6EE60A1D
+signing.password=iZooto@1234#
+signing.secretKeyRingFile=/Users/amit_sdk_develoer/.gnupg/secring.gpg
+org.gradle.daemon=true
