--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,10 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 11 16:57:39 IST 2024
+#Wed Aug 14 11:49:32 IST 2024
+ossrhPassword=
+ossrhUsername=
 sdk.dir=/Users/amit_sdk_develoer/Library/Android/sdk
+signing.keyId=
+signing.password=
+sonatypeStagingProfileId=
