SDK -Release -2.6.5 Bug Fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
+        <meta-data
+            android:name="com.google.android.gms.ads.INTEGRATION_MANAGER"
+            android:value="webview"/>
         <activity
             android:name=".MainActivity"
             android:configChanges="uiMode|screenSize|orientation|screenLayout|navigation"
