--- a/izooto/src/main/AndroidManifest.xml
+++ b/izooto/src/main/AndroidManifest.xml
@@ -35,7 +35,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_path" />
         </provider>
-
+        <meta-data
+            android:name="com.google.android.gms.ads.INTEGRATION_MANAGER"
+            android:value="webview"/>
         <activity
             android:name=".iZootoWebViewActivity"
             android:exported="false"
