--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 24
         //noinspection OldTargetApi
         targetSdkVersion 33
         versionCode 13
@@ -16,7 +16,7 @@ android {
         multiDexEnabled true
 
         manifestPlaceholders = [
-                izooto_app_id: "aeb7d82c8dcc0bcebc9684c2ad8a4a384980e640"//"09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"
+                izooto_app_id: "09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"//"09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"
         ]
 
     }
@@ -44,8 +44,8 @@ dependencies {
     implementation project(path: ':izooto')
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.browser:browser:1.8.0'
-    implementation platform('com.google.firebase:firebase-bom:33.1.2')
+    implementation 'androidx.browser:browser:1.6.0'
+    implementation platform('com.google.firebase:firebase-bom:33.2.0')
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
@@ -53,5 +53,7 @@ dependencies {
     implementation("androidx.credentials:credentials-play-services-auth:1.2.2")
     implementation("com.google.android.libraries.identity.googleid:googleid:1.1.0")
     implementation ('com.comscore:android-analytics:6.11.1')
-    implementation ('com.google.android.gms:play-services-appset:16.1.0')
+    implementation 'com.google.android.gms:play-services-ads:23.0.0'
+    // implementation ('com.google.android.gms:play-services-appset:16.1.0')
+
 }
