--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         multiDexEnabled true
 
         manifestPlaceholders = [
-                izooto_app_id: "09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"//"09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"
+                izooto_app_id: "aeb7d82c8dcc0bcebc9684c2ad8a4a384980e640"//"aeb7d82c8dcc0bcebc9684c2ad8a4a384980e640"//"09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"
         ]
 
     }
@@ -53,7 +53,9 @@ dependencies {
     implementation("androidx.credentials:credentials-play-services-auth:1.2.2")
     implementation("com.google.android.libraries.identity.googleid:googleid:1.1.0")
     implementation ('com.comscore:android-analytics:6.11.1')
+    implementation ('com.google.android.gms:play-services-appset:16.1.0')
+    implementation 'androidx.activity:activity:1.9.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.google.android.gms:play-services-ads:23.0.0'
-    // implementation ('com.google.android.gms:play-services-appset:16.1.0')
 
 }
