SDK -Release -2.6.5 Bug Fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-9298860897894361~4907509724"/>
+
 
         <activity
             android:name=".SecondActivity"
