--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -113,7 +113,7 @@ pipelines:
                         echo "Skipping: No changes to commit."
                     else
                         git add .
-                        git commit -m "SDK -Release -2.6.5 Bug Fixed"
+                        git commit -m "SDK -Pulse Feature Released 3.0.1"
                         git push origin master
                     fi
             
