--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
 
 NEXUS_USERNAME=BhiCAe56
 NEXUS_PASSWORD=aQ8D0zLiBgIwWpfiwmlMXWh4k8MGwh/cTjzBpHQzQjBM
-signing.keyId=6EE60A1D
-signing.password=iZooto@1234#
-signing.secretKeyRingFile=/Users/amit_sdk_develoer/.gnupg/secring.gpg
+signing.keyId=7F3DD060
+signing.password=izooto786
+signing.secretKeyRingFile=/Users/pramodrai/.gnupg/secring.gpg
 org.gradle.daemon=true
